# mint-xreader-pro

./: .gitignore  ISSUES_FOUND.md  ONDA1_SUMMARY.md  ONDA2_COMPLETE.md  ONDA2_START.md  PERFORMANCE.md  README.md  RELATORIO_PENDENCIAS_XREADER.md  debug_tree.py  meson.build  reproduce_issue.py  verify_actions.py  verify_atspi.py  xreader_final_verification.txt  xreader_log.txt  xreader_verification.txt
all_backends/: comicsdocument.xreader-backend  djvudocument.xreader-backend  dvidocument.xreader-backend  epubdocument.xreader-backend  pdfdocument.xreader-backend  psdocument.xreader-backend
data/: meson.build  xreader.appdata.xml.in  xreader.desktop.in.in
debian/: changelog  control
docs/: 00-onboarding.md  01-architecture.md  02-operations.md  03-qa.md  04-security.md  06-release.md  07-repo-governance.md  Technical_Audit_Report.md
help/: ChangeLog
install-scripts/: dev-run.sh  diagnostics.sh  gui-test-run.sh  meson.build  run-gui-suite.sh
libdocument/: ev-annotation.c  ev-annotation.h  ev-attachment.c  ev-attachment.h  ev-backends-manager.c  ev-backends-manager.h  ev-document-annotations.c  ev-document-annotations.h  ev-document-attachments.c  ev-document-attachments.h  ev-document-fonts.c  ev-document-fonts.h  ev-document-forms.c  ev-document-forms.h  ev-document-images.c  ev-document-images.h  ev-document-layers.c  ev-document-layers.h  ev-document-links.c  ev-document-links.h  ev-document-print.c  ev-document-print.h  ev-document-security.c  ev-document-security.h  ev-document-transition.c  (+27 more)
test/: meson.build  testCommon.py  testTabsShortcuts.py
(+482 files in other folders)
